Closed Bug 726416 Opened 14 years ago Closed 14 years ago

Fix some content/ build warnings

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: Ms2ger, Assigned: Ms2ger)

References

(Blocks 1 open bug)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

Attached patch Patch v1Splinter Review
No description provided.
Attachment #596447 - Flags: review?(mounir)
Comment on attachment 596447 [details] [diff] [review] Patch v1 Review of attachment 596447 [details] [diff] [review]: ----------------------------------------------------------------- r=me with the comment addressed ::: content/media/nsBuiltinDecoder.cpp @@ +326,5 @@ > // http://www.whatwg.org/specs/web-apps/current-work/multipage/the-video-element.html#seeking > PRInt32 range = 0; > if (!IsInRanges(seekable, aTime, range)) { > if (range != -1) { > + if (PRUint32(range + 1) < length) { Could you just add a comment saying that |range + 1| can't be negative because |range| minimal value is -1? Otherwise, that conversion would be dangerous.
Attachment #596447 - Flags: review?(mounir) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [qa-]
Target Milestone: --- → mozilla13
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: