Bug 726416 - Fix some content/ build warnings; r=mounir